force-app/main/default/objects/BusinessOpportunity__c/BusinessOpportunity__c.object-meta.xml
<CustomObject>
    <label>Business Opportunity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>שם</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>