force-app/main/default/objects/BusinessOpportunity__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Business Opportunities</relationshipLabel>
    <relationshipName>Business_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>