force-app/main/default/objects/BusinessOpportunity__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipLabel>Business Opportunities</relationshipLabel>
    <relationshipName>Business_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>